<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@null"
    >

    <TextView
        android:id="@+id/login_help_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ParseLoginUI.TextView"
        android:gravity="center"
        android:text="@string/com_parse_ui_login_help_instructions" />

    <EditText
        android:id="@+id/login_help_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_help_instructions"
        android:padding="5dp"
        android:layout_marginTop="@dimen/com_parse_ui_xlarge_vertical_spacing"
        android:hint="@string/com_parse_ui_login_help_email_input_hint"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:textColorHint="#eaeff3"
        android:gravity="center"
        android:background="@drawable/textlines"
        android:textColor="#eaeff3"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ic_action_mail"></EditText>

    <Button
        android:id="@+id/login_help_submit"
        style="@style/ParseLoginUI.Button"
        android:layout_marginTop="@dimen/com_parse_ui_xlarge_vertical_spacing"
        android:layout_gravity="center"
        android:layout_below="@id/login_help_email_input"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:text="@string/com_parse_ui_login_help_submit_button_label" />
</RelativeLayout>
